# linkextractor

./: .gitignore  LICENSE  README.md  TECHNICAL_DOCS.md  main.py  parse_ttl.py  parse_turtle.py  parser_le_eu_regelgeving.py  parser_le_links.py  perms_art_5_1_bw.txt  preprocess.py  process_case_triples.py  pyproject.toml  pytest.ini  requirements.txt  test_queries.py
caselaw/: constants.py  db.py  prepare.sh  process_cases.py  process_laws.py
caselaw/db/: postgres.py  sqlite.py
caselaw/utils/: print.py  stream.py  turtle.py
linkextractor/: __init__.py  db.py  main.py  permutations.py  search.py  test_queries.py  types.py  utils.py
linkextractor/analyze/: README.md  method_1.py  method_2.py  prepare.py  test.py
pipeline/: README.md  bwbidlist.py  process_cases.py  process_laws.py
pipeline/db/: postgres.py  sqlite.py
pipeline/utils/: benchmarking.py  stream.py
src/: db.py  main.py  patterns.py  permutations.py  prepare.py  schemas.py  search.py  types.py  utils.py
src/analyze/: README.md  main.py  method_1.py  method_2.py  prepare.py
test/claude-triener/: load.py  trie_ner.py  trie_scanner.py
test/gpt-dict/: main.py
test/gpt-triener/: trie.py
test/sqlite/: main.py
test/wetten/: BWBR0002656_2024-01-01_0.xml
tests/: test_amount_cases.py  test_awb.py  test_bw.py
tests/exact/: test_awb.py  test_bw.py  test_whw.py
